# tmp-dftd4-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-static.yml
external_deps/: CMakeLists.txt
src/: ffi.rs  lib.rs  library.rs  rest_interface.rs
tests/: test.rs
